java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint11-hints.pass
[AddCastFix:...new ArrayList<...>(...):List<CharSequence>]
Change type of l2 to ArrayList&lt;T>
